# adaptive-room-harness

./: .env.example  .gitignore  .room-profiles.toml  AGENTS.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: IDEA_DOC_V2.md  PRODUCT_DIRECTION.md  QUICK_DEMO.md  TECHNICAL_ARCHITECTURE.md  USABLE_STAGE_ROADMAP.md
src/adaptive_room_harness/: __init__.py  agents.py  cli.py  models.py  profiles.py  server.py  services.py  store.py
tests/: test_cli.py
